# CameraX

app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cameraxapp/: MainActivity.kt  OverlayView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
